examples/test/testpolicy7406.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7406
  namespace: namespace111
spec:
  podSelector:
    matchLabels:
      key1: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value10
          key13: value20
          key29: value14
      podSelector:
        matchLabels:
          key6: value20
          key42: value31
